@@ -44,12 +44,11 @@ import org.elasticsearch.xpack.core.ilm.UnfollowAction;
 import org.elasticsearch.xpack.core.ilm.WaitForSnapshotAction;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.SortedMap;
 import java.util.TreeMap;
+import java.util.concurrent.TimeUnit;
 
 import static org.elasticsearch.xpack.ilm.LifecyclePolicyTestsUtils.newTestLifecyclePolicy;
 import static org.elasticsearch.xpack.ilm.LifecyclePolicyTestsUtils.randomTimeseriesLifecyclePolicy;
@@ -62,10 +61,7 @@ public class IndexLifecycleMetadataTests extends ChunkedToXContentDiffableSerial
         Map<String, LifecyclePolicyMetadata> policies = Maps.newMapWithExpectedSize(numPolicies);
         for (int i = 0; i < numPolicies; i++) {
             LifecyclePolicy policy = randomTimeseriesLifecyclePolicy(randomAlphaOfLength(4) + i);
-            policies.put(
-                policy.getName(),
-                new LifecyclePolicyMetadata(policy, Collections.emptyMap(), randomNonNegativeLong(), randomNonNegativeLong())
-            );
+            policies.put(policy.getName(), new LifecyclePolicyMetadata(policy, Map.of(), randomNonNegativeLong(), randomNonNegativeLong()));
         }
         return new IndexLifecycleMetadata(policies, randomFrom(OperationMode.values()));
     }
@@ -83,7 +79,7 @@ public class IndexLifecycleMetadataTests extends ChunkedToXContentDiffableSerial
     @Override
     protected NamedWriteableRegistry getNamedWriteableRegistry() {
         return new NamedWriteableRegistry(
-            Arrays.asList(
+            List.of(
                 new NamedWriteableRegistry.Entry(
                     LifecycleType.class,
                     TimeseriesLifecycleType.TYPE,
@@ -110,7 +106,7 @@ public class IndexLifecycleMetadataTests extends ChunkedToXContentDiffableSerial
     protected NamedXContentRegistry xContentRegistry() {
         List<NamedXContentRegistry.Entry> entries = new ArrayList<>(ClusterModule.getNamedXWriteables());
         entries.addAll(
-            Arrays.asList(
+            List.of(
                 new NamedXContentRegistry.Entry(
                     LifecycleType.class,
                     new ParseField(TimeseriesLifecycleType.TYPE),
@@ -154,7 +150,7 @@ public class IndexLifecycleMetadataTests extends ChunkedToXContentDiffableSerial
                 policyName,
                 new LifecyclePolicyMetadata(
                     randomTimeseriesLifecyclePolicy(policyName),
-                    Collections.emptyMap(),
+                    Map.of(),
                     randomNonNegativeLong(),
                     randomNonNegativeLong()
                 )
@@ -190,10 +186,10 @@ public class IndexLifecycleMetadataTests extends ChunkedToXContentDiffableSerial
             int numberPhases = randomInt(5);
             Map<String, Phase> phases = Maps.newMapWithExpectedSize(numberPhases);
             for (int j = 0; j < numberPhases; j++) {
-                TimeValue after = TimeValue.parseTimeValue(randomTimeValue(0, 1000000000, "s", "m", "h", "d"), "test_after");
-                Map<String, LifecycleAction> actions = Collections.emptyMap();
+                TimeValue after = randomTimeValue(0, 1_000_000_000, TimeUnit.SECONDS, TimeUnit.MINUTES, TimeUnit.HOURS, TimeUnit.DAYS);
+                Map<String, LifecycleAction> actions = Map.of();
                 if (randomBoolean()) {
-                    actions = Collections.singletonMap(DeleteAction.NAME, DeleteAction.WITH_SNAPSHOT_DELETE);
+                    actions = Map.of(DeleteAction.NAME, DeleteAction.WITH_SNAPSHOT_DELETE);
                 }
                 String phaseName = randomAlphaOfLength(10);
                 phases.put(phaseName, new Phase(phaseName, after, actions));
@@ -203,7 +199,7 @@ public class IndexLifecycleMetadataTests extends ChunkedToXContentDiffableSerial
                 policyName,
                 new LifecyclePolicyMetadata(
                     newTestLifecyclePolicy(policyName, phases),
-                    Collections.emptyMap(),
+                    Map.of(),
                     randomNonNegativeLong(),
                     randomNonNegativeLong()
                 )
